--- a/.github/workflows/sbom-scan.yml
+++ b/.github/workflows/sbom-scan.yml
@@ -7,56 +7,55 @@ on:
   workflow_dispatch:
 
 permissions:
-  contents: write   # complianceフォルダへの自動コミット用
+  contents: write   # /compliance へ自動コミット用
 
 jobs:
   sbom_scan:
     runs-on: ubuntu-latest
+    timeout-minutes: 10
 
     steps:
-      # ① ソース取得
-      - name: Checkout repository
+      - name: Checkout
         uses: actions/checkout@v4
 
-      # ② Nodeセットアップ（依存関係解析のため）
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 20
 
-      - name: Install dependencies
+      - name: Install deps
         run: npm ci
 
-      # ③ SyftでSBOM生成
-      - name: Generate SBOM (Syft)
-        uses: anchore/syft-action@v1
+      # ✅ SyftでSBOM生成（公式：anchore/sbom-action）
+      - name: Generate SBOM (CycloneDX)
+        uses: anchore/sbom-action@v0
         with:
-          image: dir:.
-          output: sbom.cdx.json
+          path: .
           format: cyclonedx-json
+          output-file: sbom.cdx.json
 
-      # ④ Grypeで脆弱性スキャン
+      # ✅ Grypeでスキャン（公式：anchore/scan-action）
       - name: Scan vulnerabilities (Grype)
-        uses: anchore/grype-action@v1
+        uses: anchore/scan-action@v3
         with:
           sbom: sbom.cdx.json
-          output: table
+          fail-build: false   # High以上で失敗させたい時は true とし severity-cutoff 併用
+          severity-cutoff: high
+          output-format: table
         continue-on-error: true
 
-      # ⑤ 結果をcomplianceフォルダに保存
-      - name: Save results
+      - name: Save results to /compliance
         run: |
           mkdir -p compliance
           mv sbom.cdx.json compliance/
-          mv grype-report.txt compliance/ || true
+          # scan-actionはSARIFやJSONも出力可能だが、tableはログ出力が基本
           echo "Scan date: $(date -u)" > compliance/summary.txt
           echo "Commit: $GITHUB_SHA" >> compliance/summary.txt
 
-      # ⑥ 自動コミット
-      - name: Commit and push compliance files
+      - name: Commit & push
         run: |
           git config user.name "github-actions"
           git config user.email "actions@github.com"
           git add compliance/
-          git commit -m "chore: update SBOM and scan results [ci skip]" || echo "No changes"
+          git commit -m "chore: update SBOM & scan results [ci skip]" || echo "No changes"
           git push
